# code-examples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt
benchmark/include/benchmark/: benchmark.h
benchmark/src/: benchmark.c  bitonic_merge.c
inotify/: CMakeLists.txt
inotify/src/: inotify.c
options/: CMakeLists.txt
options/src/: options.c
signal/: CMakeLists.txt
signal/src/: signal.c
video/: CMakeLists.txt  README.md
video/include/video/: source.h
video/src/: main.c  video.c
yaml/: CMakeLists.txt
yaml/src/: main.cpp
